--- a/ITSC-1212/.vscode/settings.json
+++ b/ITSC-1212/.vscode/settings.json
@@ -8,8 +8,8 @@
         "Lab_07",
         "Lab_08",
         "Lab_09",
-        "Lab_11",
         "Project_01",
-        "Project_03"
+        "Project_03",
+        "Lab_11 & Lab_12"
     ]
 }
