--- a/ITSC-1212/.vscode/settings.json
+++ b/ITSC-1212/.vscode/settings.json
@@ -8,8 +8,9 @@
         "Lab_07",
         "Lab_08",
         "Lab_09",
+        "Lab_11 & Lab_12",
+        "Lab_13 & Lab_14",
         "Project_01",
-        "Project_03",
-        "Lab_11 & Lab_12"
+        "Project_03"
     ]
 }
