--- a/ITSC-1212/.vscode/settings.json
+++ b/ITSC-1212/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Lab_11 & Lab_12",
         "Lab_13 & Lab_14",
         "Project_01",
-        "Project_03"
+        "Project_03",
+        "Project_04"
     ]
 }
