--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /.metadata/
 /ITSC-3155/Flask_Exercises/Exercise_1/__pycache__/
+/ITSC-3155/Flask_Exercises/Exercise_2/__pycache__/
+/ITSC-3155/Flask_Exercises/Exercise_3/__pycache__/
