--- a/ITCS-3145/Assignment_02/Makefile
+++ b/ITCS-3145/Assignment_02/Makefile
@@ -1,7 +1,7 @@
 all: minions
 
 minions: minions.c Makefile
-	gcc -c -Wall -Wextra minions.c -o minions -pthread
+	gcc -g -Wall -Wextra minions.c -o minions -pthread
 
 clean:
 	rm -f minions
